# ida-pro-class-generator

./: .clang-format  .gitignore  c_printer.py  class_constructor.py  class_resolver.py  clex.pyi  config.cfg  exeptions.py  investigations.txt  lexer.py  main.py  method_printer.py  module_linker.py  module_printer.py  name_analyzer.py  parser.py  pyproject.toml  statement.py  statement.pyi
clex/: clexmodule.c  lexerobject.c  tokenobject.c  tokenobject.h
clexer/: clexmodule.c  lexerobject.c  lexerobject.h  tokenobject.c  tokenobject.h  utils.h
hierarchies/: inheritance.txt  inheritance2.txt
hierarchies/fallout4/: inheritance.txt
hierarchies/gta5/: inheritance.txt
hierarchies/hitman3/: inheritance.txt
hierarchies/witcher3/: inheritance.txt
ipcg/: class_resolver.py  exeptions.py  lexer.py  method_printer.py  module_linker.py  module_printer.py  parser.py  statement.py  tokens.py
ipcg/providers/: clex_provider.py  pygments_provider.py
